--- a/job.html
+++ b/job.html
@@ -40,16 +40,16 @@
 </html>
 
 <!-- <div class="css-table">
-  <div class="css-t-body">
-    <div class="css-thead">
-      <div class="css-tr">
-        <div class="css-th">日期</div>
-        <div class="css-th">職位名稱</div>
-        <div class="css-th">薪資</div>
-        <div class="css-th">公司名稱</div>
-        <div class="css-th">公司地址</div>
-      </div>
+  <div class="css-thead">
+    <div class="css-tr">
+      <div class="css-th">日期</div>
+      <div class="css-th">職位名稱</div>
+      <div class="css-th">薪資</div>
+      <div class="css-th">公司名稱</div>
+      <div class="css-th">公司地址</div>
     </div>
+  </div>
+  <div class="css-t-body">
     <a class="css-tr" href='#'>
       <div class="css-td">2021-04-01</div>
       <div class="css-td">Rails 工程師</div>
@@ -61,6 +61,7 @@
 </div>
 <div class="pagination">
   <span class="backpage hidden">上一頁</span>
+  <span id="page1" class="pageNumber">1</span>
   <span class="nextpage">下一頁</span>
   <span class="page-counter"> 1/1 頁<span>
 </div> -->
